# rag_tutor

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.virtual_documents/app/notebooks/: validation_rag.ipynb
app/: Dockerfile  README.md
app/backend/: main.py  models.py
app/backend/agents/: __init__.py  base_agent.py  math_tutor_agent.py
app/backend/prompts/: __init__.py  math_tutor_agent.py
app/backend/rag/: __init__.py  retriever.py  retriever_with_neighbours.py
app/backend/tools/: __init__.py  base_tool.py  code_interpreter.py  save_in_memory.py
app/frontend/: __init__.py  latex_renderer.py  streamlit_app.py
app/notebooks/: dataset_last.pickle  df_metircs_baseline.csv  df_metircs_upgraded.csv  metrics_truthfulness.csv  metrics_truthfulness_best_retriever.csv  regas_metrics.txt  result_ragas_df.csv  retriever_upgrade_rerank.csv  validation_all.json  validation_rag.ipynb  validation_rag_upgrade.ipynb
rag_tutor/: __init__.py
samples/: sample_chunks0.json  sample_chunks_last.json
samples/.ipynb_checkpoints/: sample_chunks-checkpoint.json
samples/chunks_md/middle_school/7 класс/Алгебра 7 класс_Учебник_Мордкович_2001/: 032__9_ПОНЯТИЕ_ОДНОЧЛЕНА_СТАНДАРТНЫЙ_ВИД_ОДНОЧЛЕНА.md
samples/chunks_md/middle_school/8 класс/Алгебра. 8кл. (повыш. уров.) Учебник_Мордкович А.Г, Николаев Н.П_2008 -240с/: 166_3_КВАДРАТИЧНАЯ_ФУНКЦИЯ_ФУНКЦИЯ_у_k.md
samples/chunks_md/middle_school/9 класс/События. Вероятности. Стат. обработка данных. Доп. к Алгебре 7-9кл. Мордкович, Семенов_2008 -112с/: 048__2_ВЫБОР_НЕСКОЛЬКИХ_ЭЛЕМЕНТОВ_СОЧЕТАНИЯ.md
samples/chunks_md/university/1_course/Математический анализ. Дифференциальное исчисление_Виленкин, Куницкая, Мордкович_1978 -161с/: 036_1_Задача_о_проведении_касательной_к_графику_функции.md
samples/chunks_md/university/2_course/Математический анализ. Интегральное исчисление_Виленкин, Куницкая, Мордкович_1979 -177с/: 024_2_Интегрирование_по_частям_в_определенном_интеграле.md
samples/chunks_md/university/4_course/Дифференциальные уравнения_Виленкин Н.Я, Доброхотова М.А, Сафонов А.Н_1984 -176с/: 041_5_Определение_типа_дифференциального_уравнения.md
samples/chunks_md/Алгебра и начала мат. анализа. 10кл. В 2-х ч. Ч.1. Учебник. (проф. уровень)_Мордкович А.Г, Семенов П.В_2009 -424с/: 100_6_Метод_математической_индукции.md
samples/chunks_md/Алгебра. 9кл. Методическое пособие_Мордкович А.Г, Семенов П.В_2010 -72с11/: 002_СИСТЕМЫ УРАВНЕНИЙ (1).md
samples/chunks_md/Дифференциальные уравнения_Виленкин Н.Я, Доброхотова М.А, Сафонов А.Н_1984 -176с/: 111_3_Решение_геометрических_задач_с_помощью_дифференциальных_уравнений.md
scripts/: README.md  download_faiss_data.py  ingest.py  parse_to_md_and_chunks.py  parse_to_md_and_chunks_fais.py  parse_to_md_and_chunks_faiss.py
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
validation/: config.yaml  pyproject.toml  review-two.md
validation/core/: __init__.py  config.py  ranking.py  vector_store.py
validation/core/llm/: __init__.py  chains.py  deepeval_adapter.py  models.py  vllm_client.py
validation/core/retrieval/: __init__.py  advanced_retriever.py  contextual_retrieval.py  hybrid_search.py  hyde_enhanced.py  neighbor_enricher.py  rag_fusion.py
validation/evals/: README.md  __init__.py
validation/evals/golden_sets/: math_golden_sample.csv
validation/evals/research/: RESEARCH_README.md  __init__.py  config.yaml
validation/evals/research/evals/: __init__.py  evaluation.py
validation/evals/research/scripts/: compare_retrievers.py  create_vectordb.py  evaluate.py  evaluate_models.py  evaluate_retrieval.py  generate_groundtruth.py
